--- a/src/layout/Header/Header.module.css
+++ b/src/layout/Header/Header.module.css
@@ -1,4 +1,4 @@
-.header {
+.header-navbar {
     position: fixed;
     top: 0;
     left: 0;
@@ -6,4 +6,5 @@
     z-index: 999;
 
     padding: 0 24px;
+    background-color: var(--black-color-01);
 }
