--- a/src/pages/Product/Product.module.css
+++ b/src/pages/Product/Product.module.css
@@ -46,3 +46,19 @@
 .menu {
     margin-top: 172px;
 }
+
+.notFound {
+    text-align: center;
+    padding-top: 80px;
+}
+
+.notFound p {
+    color: var(--orange-color-dark);
+    margin-bottom: 20px;
+    font-weight: bold;
+}
+
+.notFound a {
+    opacity: .5;
+    display: inline-block;
+}
