add checkout page & add scrolltotop when changing page

--- a/src/UI/Modal/Modal.module.css
+++ b/src/UI/Modal/Modal.module.css
@@ -16,4 +16,7 @@
     z-index: 99;
     background-color: var(--white-color);
     border-radius: 8px;
+
+    max-height: 100vh;
+    overflow-y: scroll;
 }
