--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -21,3 +21,9 @@
 .white .discription {
     opacity: .5;
 }
+
+@media screen and (min-width: 768px) {
+    .discription {
+        margin: 0 16px 40px;
+    }
+}
