--- a/src/layout/Footer/Footer.module.css
+++ b/src/layout/Footer/Footer.module.css
@@ -39,3 +39,24 @@
     width: 24px;
     display: inline-block;
 }
+
+@media screen and (min-width: 768px) {
+    .footer {
+        padding: 60px 40px 46px;
+        margin-top: 96px;
+
+        text-align: left;
+    }
+
+    .footer-bottom {
+        margin-top: 80px;
+
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .footer-copyright {
+        margin-bottom: 0;
+    }
+}
