--- a/src/layout/Header/HeaderCategory.module.css
+++ b/src/layout/Header/HeaderCategory.module.css
@@ -11,3 +11,15 @@
     letter-spacing: 2px;
     color: var(--white-color);
 }
+
+@media screen and (min-width: 768px) {
+    .headerCategory {
+        padding: 194px 0 96px;
+    }
+
+    .title {
+        font-size: 40px;
+        line-height: 44px;
+        letter-spacing: 1.43px;
+    }
+}
