--- a/src/layout/Kanban/Kanban.module.css
+++ b/src/layout/Kanban/Kanban.module.css
@@ -15,3 +15,18 @@
     left: 50%;
     transform: translateX(-50%);
 }
+
+@media screen and (min-width: 768px) {
+    .kanban {
+        background: #000000 url(../../assets/home/tablet/image-header.jpg) center / 768px no-repeat;
+        height: 729px;
+    }
+
+    .kanban-wrapper {
+        /* width: 396px; */
+        max-width: 396px;
+        padding: 0;
+
+        top: 30%;
+    }
+}
