--- a/src/layout/NavBar/NavBar.module.css
+++ b/src/layout/NavBar/NavBar.module.css
@@ -8,4 +8,21 @@
 
 .navbar-link {
     line-height: 1;
+    width: 143px;
+    display: inline-block;
+}
+
+@media screen and (min-width: 768px) {
+    .navbar {
+        padding: 32px 0;
+        justify-content: flex-start;
+    }
+
+    .navbar-link {
+        margin-left: 42px;
+    }
+
+    .button {
+        margin-left: auto;
+    }
 }
