--- a/src/pages/Category/CategoryList.module.css
+++ b/src/pages/Category/CategoryList.module.css
@@ -4,3 +4,10 @@
     margin-top: 64px;
     margin-bottom: 172px;
 }
+
+@media screen and (min-width: 768px) {
+    .list {
+        padding: 0 40px;
+        margin-top: 120px;
+    }
+}
