--- a/src/pages/Checkout/CheckoutForm/CheckoutConfirmation.module.css
+++ b/src/pages/Checkout/CheckoutForm/CheckoutConfirmation.module.css
@@ -26,3 +26,21 @@
     color: var(--white-color);
     margin-top: 22px;
 }
+
+@media screen and (min-width: 768px) {
+    .confirm {
+        padding: 48px;
+    }
+
+    .title {
+        font-size: 32px;
+        line-height: 36px;
+        letter-spacing: 1.14px;
+        margin-top: 32px;
+        margin-bottom: 24px;
+    }
+
+    .button {
+        margin-top: 46px;
+    }
+}
