--- a/src/pages/Checkout/CheckoutUserInfo/CheckoutUserInfo.module.css
+++ b/src/pages/Checkout/CheckoutUserInfo/CheckoutUserInfo.module.css
@@ -11,3 +11,15 @@
     line-height: 38px;
     letter-spacing: 1px;
 }
+
+@media screen and (min-width: 768px) {
+    .wrapper {
+        padding: 30px 28px;
+    }
+
+    .title {
+        font-size: 32px;
+        line-height: 36px;
+        letter-spacing: 1.14px;
+    }
+}
