--- a/src/pages/Product/ProductGallery.module.css
+++ b/src/pages/Product/ProductGallery.module.css
@@ -7,3 +7,29 @@
     border-radius: 8px;
     overflow: hidden;
 }
+
+@media screen and (min-width: 768px) {
+    .gallery {
+        margin-top: 120px;
+        display: grid;
+        grid-template-columns: 1fr 1.5fr;
+        grid-template-rows: auto auto;
+        height: 368px;
+    }
+
+    .gallery-image {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .gallery-image-inner {
+        width: 100%;
+    }
+
+    .gallery-image:nth-child(3) {
+        grid-column: 2;
+        grid-row: 1 / span 2;
+        margin-left: 18px;
+    }
+}
