--- a/src/pages/Product/ProductOtherItem.module.css
+++ b/src/pages/Product/ProductOtherItem.module.css
@@ -17,3 +17,14 @@
 .item-button {
     color: var(--white-color);
 }
+
+@media screen and (min-width: 768px) {
+    .item {
+        margin-bottom: 0;
+        width: calc((100% - 20px) / 3);
+    }
+
+    .item-title {
+        margin: 40px 0 32px;
+    }
+}
