--- a/src/pages/Product/ProductOthers.module.css
+++ b/src/pages/Product/ProductOthers.module.css
@@ -13,3 +13,20 @@
     list-style: none;
     margin-top: 40px;
 }
+
+@media screen and (min-width: 768px) {
+    .others {
+        margin-top: 100px;
+    }
+
+    .others-title {
+        font-size: 32px;
+        letter-spacing: 1.14px;
+    }
+
+    .others-list {
+        margin-top: 56px;
+        display: flex;
+        justify-content: space-between;
+    }
+}
