--- a/src/pages/Product/ProductCard.module.css
+++ b/src/pages/Product/ProductCard.module.css
@@ -37,3 +37,24 @@
         margin: 32px 0;
     }
 }
+
+@media screen and (min-width: 1200px) {
+    .productCard {
+        margin-left: 0;
+        width: 445px;
+    }
+
+    .overline {
+        margin-bottom: 16px;
+    }
+
+    .title {
+        font-size: 40px;
+        line-height: 44px;
+        letter-spacing: 1.43px;
+    }
+
+    .price {
+        margin-bottom: 46px;
+    }
+}
