--- a/src/UI/AmountInput/AmountInput.module.css
+++ b/src/UI/AmountInput/AmountInput.module.css
@@ -31,3 +31,15 @@
     letter-spacing: 1px;
     padding: 0;
 }
+
+@media screen and (min-width: 1200px) {
+    .input button {
+        transition: all .2s;
+    }
+
+    .input button:hover {
+        color: var(--orange-color-dark);
+        opacity: 1;
+        cursor: pointer;
+    }
+}
