--- a/src/UI/InputRadio/InputRadio.module.css
+++ b/src/UI/InputRadio/InputRadio.module.css
@@ -71,3 +71,14 @@
         margin-bottom: 16px;
     }
 }
+
+@media screen and (min-width: 1200px) {
+    .input label {
+        transition: all .2s;
+    }
+
+    .input input:hover+label {
+        border-color: var(--orange-color-dark);
+        cursor: pointer;
+    }
+}
