--- a/src/layout/Menu/Menu.module.css
+++ b/src/layout/Menu/Menu.module.css
@@ -16,3 +16,9 @@
         justify-content: space-between;
     }
 }
+
+@media screen and (min-width: 1200px) {
+    .menu {
+        margin-top: 200px;
+    }
+}
