--- a/src/pages/Checkout/Checkout.module.css
+++ b/src/pages/Checkout/Checkout.module.css
@@ -10,3 +10,12 @@
         padding: 48px 40px 0;
     }
 }
+
+@media screen and (min-width: 1200px) {
+    .main {
+        padding: 80px 0 0;
+        width: 100%;
+        max-width: 1110px;
+        margin: 90px auto 0;
+    }
+}
