--- a/src/pages/Checkout/CheckoutCart/CheckoutCart.module.css
+++ b/src/pages/Checkout/CheckoutCart/CheckoutCart.module.css
@@ -28,3 +28,10 @@
         margin-top: 32px;
     }
 }
+
+@media screen and (min-width: 1200px) {
+    .wrapper {
+        width: 350px;
+        margin-top: 0;
+    }
+}
