--- a/src/pages/Product/ProductGallery.module.css
+++ b/src/pages/Product/ProductGallery.module.css
@@ -33,3 +33,14 @@
         margin-left: 18px;
     }
 }
+
+@media screen and (min-width: 1200px) {
+    .gallery {
+        margin-top: 160px;
+        height: 592px;
+    }
+
+    .gallery-image:nth-child(3) {
+        margin-left: 30px;
+    }
+}
