--- a/src/pages/Product/ProductOthers.module.css
+++ b/src/pages/Product/ProductOthers.module.css
@@ -30,3 +30,13 @@
         justify-content: space-between;
     }
 }
+
+@media screen and (min-width: 1200px) {
+    .others {
+        margin-top: 140px;
+    }
+
+    .others-list {
+        margin-top: 64px;
+    }
+}
