--- a/src/UI/Fieldset/Fieldset.module.css
+++ b/src/UI/Fieldset/Fieldset.module.css
@@ -17,6 +17,8 @@
         display: inline-flex;
         flex-wrap: wrap;
         justify-content: space-between;
+
+        width: 100%;
     }
 
     .title {
