--- a/src/components/BackButton/BackButton.module.css
+++ b/src/components/BackButton/BackButton.module.css
@@ -8,6 +8,10 @@
         transition: all .2s;
     }
 
+    .back-link:hover {
+        cursor: pointer;
+    }
+
     .back-link:hover span {
         color: var(--orange-color-dark);
         opacity: 1;
